--- a/.github/workflows/lint-js-css.yml
+++ b/.github/workflows/lint-js-css.yml
@@ -16,7 +16,7 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: npm install eslint-config-prettier stylelint
+        run: npm install eslint eslint-config-prettier stylelint
 
       - name: Run linters
         uses: wearerequired/lint-action@v1
@@ -26,3 +26,6 @@ jobs:
           eslint: true
           prettier: true
           stylelint: true 
+          eslint_dir: source/site/
+          prettier_dir: source/site/
+          stylelint_dir: source/site/
