--- a/source/site/package.json
+++ b/source/site/package.json
@@ -21,6 +21,6 @@
     "prettier": "*",
     "stylelint": "*",
     "stylelint-config-recommended": "*",
-    "eslint-config-recommended": "*",
+    "eslint-config-recommended": "*"
   }
 }
