--- a/source/site/package.json
+++ b/source/site/package.json
@@ -17,10 +17,11 @@
   },
   "homepage": "https://github.com/ycyao216/cse110-w21-group17#readme",
   "dependencies": {
-    "eslint": "*",
+    "eslint": "6.0.0",
     "prettier": "*",
     "stylelint": "*",
     "stylelint-config-recommended": "*",
-    "eslint-config-recommended": "*"
+    "eslint-config-recommended": "*",
+    "eslint-config-prettier": "*"
   }
 }
