--- a/.github/workflows/lint-js-css.yml
+++ b/.github/workflows/lint-js-css.yml
@@ -1,5 +1,9 @@
 on: push
 
+defaults:
+  run:
+    working-directory: source/site
+
 jobs:
   run-linters:
     name: Run linters
@@ -16,7 +20,7 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: cd source/site && npm install
+        run:  npm install
 
       - name: Run linters
         uses: wearerequired/lint-action@v1
@@ -24,8 +28,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           # Enable linters
           eslint: true
-          eslint_dir: source/site/
           stylelint: true
-          stylelint_dir: source/site/
           prettier: true
-          prettier_dir: source/site/
