--- a/.github/workflows/lint-js-css.yml
+++ b/.github/workflows/lint-js-css.yml
@@ -16,8 +16,7 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        working-directory: source/site
-        run:  npm install
+        run: cd source/site && npm install
 
       - name: Run linters
         uses: wearerequired/lint-action@v1
@@ -25,5 +24,8 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           # Enable linters
           eslint: true
+          eslint_dir: source/site/
           stylelint: true
+          stylelint_dir: source/site/
           prettier: true
+          prettier_dir: source/site/
