stylelint-config-standard

--- a/source/site/package.json
+++ b/source/site/package.json
@@ -21,6 +21,7 @@
     "prettier": "*",
     "stylelint": "*",
     "stylelint-config-recommended": "*",
+    "stylelint-config-standard": "*",
     "eslint-config-recommended": "*",
     "eslint-config-prettier": "*"
   }
