--- a/.github/workflows/lint-js-css.yml
+++ b/.github/workflows/lint-js-css.yml
@@ -1,31 +1,14 @@
-on: push
+name: lint-css
+on: [push]
 
 jobs:
-  run-linters:
-    name: Run linters
+  linters:
+    name: stylelint
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12
-
-      # ESLint and Prettier must be in `package.json`
-      - name: Install Node.js dependencies
-        run: cd source/site && npm install
-
-      - name: Run linters
-        uses: wearerequired/lint-action@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          # Enable linters
-          eslint: true
-          eslint_dir: source/site/
-          stylelint: true
-          stylelint_dir: source/site/
-          prettier: true
-          prettier_dir: source/site/
+      - uses: actions/checkout@v1
+      - uses: actions-hub/stylelint@master
+        ENV:
+          PATTERN: "*.css"
+          INDENT_SPACES: 4
