--- a/source/site/package.json
+++ b/source/site/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "stylelint": "*",
     "stylelint-config-recommended": "*",
     "eslint-config-recommended": "*",
-    "eslint-config-prettier": "*"
+    "eslint-config-prettier": "*",
+    "jest": "*"
   }
 }
