--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -9,5 +9,6 @@ jobs:
         uses: mattallty/jest-github-action@v1.0.3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        # with:
-        #   working-directory: "source/site"
+        with:
+          working-directory: "source/site"
+          test-command: "cd source/site && npm install && npm test"
