--- a/source/site/package.json
+++ b/source/site/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest source/site"
+    "test": "jest source/site --json --outputFile=jest.results.json --coverage=true"
   },
   "jest": {
     "clearMocks": true,
