--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -9,9 +9,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - run: "cd source/site && npm i"
+      - run: cd source/site && npm i
 
-    steps:
       - name: test-coverage
         uses: mattallty/jest-github-action@v1.0.3
         env:
