jest-command: 'npm jest --coverage'

--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -9,4 +9,5 @@ jobs:
         uses: raulanatol/jest-coverage-comment-action@v1.0.4
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          jest-command: 'npm jest --coverage'
           working-directory: 'source/site'
