--- a/source/site/package.json
+++ b/source/site/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "test": "jest --coverage"
   },
+  "jest": {
+    "coverageReporters": [
+      "json-summary", 
+      "text",
+      "lcov"
+    ]
+  },
   "author": "",
   "license": "ISC",
   "bugs": {
