--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -5,6 +5,7 @@ jobs:
   test-coverage:
     runs-on: ubuntu-latest
     steps:
+      - run: npm install --prefix source/site
       - name: test-coverage
         uses: mattallty/jest-github-action@v1.0.3
         env:
