--- a/source/site/package.json
+++ b/source/site/package.json
@@ -26,6 +26,7 @@
     "stylelint-config-recommended": "*",
     "eslint-config-recommended": "*",
     "eslint-config-prettier": "*",
-    "jest": "*"
+    "jest": "*",
+    "js-beautify": "*"
   }
 }
