--- a/source/site/package.json
+++ b/source/site/package.json
@@ -26,6 +26,9 @@
   "devDependencies": {
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "html-validate": "*",
+    "stylelint": "*",
+    "stylelint-config-standard": "*"
   }
 }
