--- a/source/site/package.json
+++ b/source/site/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "docs": "./node_modules/jsdoc/jsdoc.js -c ./.jsdoc.conf.json"
   },
   "jest": {
     "coverageReporters": [
@@ -29,6 +30,7 @@
     "eslint-plugin-import": "^2.22.1",
     "html-validate": "*",
     "stylelint": "*",
-    "stylelint-config-standard": "*"
+    "stylelint-config-standard": "*",
+    "jsdoc": "*"
   }
 }
