add basic http server

--- a/source/site/package.json
+++ b/source/site/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/ycyao216/cse110-w21-group17#readme",
   "dependencies": {
     "jest": "*",
-    "js-beautify": "*"
+    "js-beautify": "*",
+    "express": "*"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
