add mongodb to package.json

--- a/source/site/package.json
+++ b/source/site/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "jest": "*",
     "js-beautify": "*",
-    "express": "*"
+    "express": "*",
+    "mongodb": "*"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
