code cleanup + format

--- a/source/site/package.json
+++ b/source/site/package.json
@@ -33,6 +33,7 @@
     "html-validate": "*",
     "stylelint": "*",
     "stylelint-config-standard": "*",
-    "jsdoc": "*"
+    "jsdoc": "*",
+    "babel-eslint": "*"
   }
 }
