--- a/source/site/frontend/.eslintrc.json
+++ b/source/site/frontend/.eslintrc.json
@@ -6,10 +6,13 @@
         "node": true
     },
     "extends": "eslint:recommended",
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
     },
     "rules": {
+        "no-unused-vars": "off",
+        "no-undef": "off"
     }
 }
