prepare files for jest

--- a/source/site/frontend/js/components/component.template
+++ b/source/site/frontend/js/components/component.template
@@ -19,6 +19,7 @@ function define_control_button(html) {
         }
     }
     customElements.define('c-control-button', CControlButton);
+    return CControlButton;
 }
 
 
