--- a/source/site/package.json
+++ b/source/site/package.json
@@ -27,6 +27,9 @@
     "mongodb": "*"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "*",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -35,5 +38,13 @@
     "stylelint-config-standard": "*",
     "jsdoc": "*",
     "babel-eslint": "*"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]
   }
 }
