--- a/source/site/package.json
+++ b/source/site/package.json
@@ -24,7 +24,8 @@
     "jest": "*",
     "js-beautify": "*",
     "express": "*",
-    "mongodb": "*"
+    "mongodb": "*",
+    "json-server": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
