--- a/source/site/package.json
+++ b/source/site/package.json
@@ -25,7 +25,8 @@
     "js-beautify": "*",
     "express": "*",
     "mongodb": "*",
-    "json-server": "*"
+    "json-server": "*",
+    "axios": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
