ignore cypress in jest

--- a/source/site/package.json
+++ b/source/site/package.json
@@ -12,7 +12,8 @@
       "json-summary",
       "text",
       "lcov"
-    ]
+    ],
+    "modulePathIgnorePatterns": ["/cypress/"]
   },
   "author": "",
   "license": "ISC",
