--- a/source/site/package.json
+++ b/source/site/package.json
@@ -13,7 +13,9 @@
       "text",
       "lcov"
     ],
-    "modulePathIgnorePatterns": ["/cypress/"]
+    "modulePathIgnorePatterns": [
+      "/cypress/"
+    ]
   },
   "author": "",
   "license": "ISC",
