--- a/source/site/package.json
+++ b/source/site/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage",
-    "docs": "./node_modules/jsdoc/jsdoc.js -c ./.jsdoc.conf.json"
+    "docs": "./node_modules/jsdoc/jsdoc.js -c ./.jsdoc.conf.json",
+    "coverage": "yarn coverage:clean && yarn coverage:cypress  || yarn coverage:jest || yarn coverage:merge && yarn coverage:merge-report",
+    "coverage:jest": "jest --coverage",
+    "coverage:instrument": "npx nyc instrument --compact=false frontend/js/ frontend/js-trans",
+    "coverage:cypress": "yarn coverage:instrument && npx cypress run",
+    "coverage:clean": "rm -rf .nyc_output && rm -rf coverage",
+    "coverage:merge": "istanbul-merge --out coverage/merged/coverage-final.json ./coverage/jest-coverage/coverage-final.json  ./coverage/cypress-coverage/coverage-final.json",
+    "coverage:merge-report": "nyc report --reporter=lcov --reporter=text --temp-dir=./coverage/merged --report-dir=./coverage/merged"
   },
   "jest": {
     "collectCoverage": true,
     "coverageDirectory": "coverage/jest-coverage",
     "coverageReporters": [
       "json",
-      "text",
-      "lcov"
+      "text"
     ],
     "modulePathIgnorePatterns": [
       "/cypress/"
@@ -43,19 +48,22 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
-    "@babel/preset-env": "*",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "eslint": "^7.19.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "html-validate": "*",
-    "stylelint": "*",
-    "stylelint-config-standard": "*",
-    "jsdoc": "*",
+    "@babel/preset-env": "*",
+    "@cypress/code-coverage": "^3.9.0",
     "babel-eslint": "*",
     "cypress": "^6.5.0",
-    "nyc": "*",
-    "@cypress/code-coverage": "^3.9.0"
+    "cypress-intellij-reporter": "0.0.6",
+    "eslint": "*",
+    "eslint-config-airbnb-base": "*",
+    "eslint-plugin-import": "*",
+    "html-validate": "*",
+    "istanbul-merge": "*",
+    "jsdoc": "*",
+    "nyc": "^15.1.0",
+    "stylelint": "*",
+    "stylelint-config-standard": "*",
+    "yarn": "*"
   },
   "babel": {
     "presets": [
