--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -21,6 +21,7 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           runTests: false
+          working-directory: source/site
 
       # now run the tests from the subfolder
       - name: Cypress run
