--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -27,7 +27,10 @@ jobs:
         run: cd source/site && npx yarn start-server &
 
       - name: Run Cypress tests
-        run: cd source/site && npx yarn coverage      
+        run: cd source/site && npx yarn coverage    
+
+      - name: Codecov
+        run: cd source/site && bash <(curl -s https://codecov.io/bash)  
 
       # # now run the tests from the subfolder
       # - name: Cypress run
