--- a/source/site/package.json
+++ b/source/site/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "docs": "./node_modules/jsdoc/jsdoc.js -c ./.jsdoc.conf.json",
     "start-server": "node ./backend/httpserver/server.js",
-    "coverage": "yarn coverage:clean && yarn coverage:cypress; yarn coverage:jest; yarn coverage:merge && yarn coverage:merge-report",
+    "coverage": "yarn coverage:clean && yarn coverage:cypress; yarn coverage:jest; yarn coverage:merge && yarn coverage:merge-report && codecov",
     "coverage:jest": "jest --coverage",
     "coverage:instrument": "npx nyc instrument --compact=false frontend/js/ frontend/js-trans",
     "coverage:cypress": "yarn coverage:instrument && npx cypress run",
@@ -64,7 +64,8 @@
     "nyc": "^15.1.0",
     "stylelint": "*",
     "stylelint-config-standard": "*",
-    "yarn": "*"
+    "yarn": "*",
+    "codecov": "*"
   },
   "babel": {
     "presets": [
