--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -30,7 +30,7 @@ jobs:
         run: cd source/site && npx yarn coverage    
 
       - name: Codecov
-        run: cd source/site && bash <(curl -s https://codecov.io/bash)  
+        run: cd source/site && npx codecov
 
       # # now run the tests from the subfolder
       # - name: Cypress run
