--- a/codecov.yml
+++ b/codecov.yml
@@ -15,7 +15,19 @@ parsers:
       method: no
       macro: no
 
+# comment:
+#   layout: "reach,diff,flags,files,footer"
+#   behavior: default
+#   require_changes: no
+
+
 comment:
-  layout: "reach,diff,flags,files,footer"
+  layout: "reach, diff, flags, files"
   behavior: default
-  require_changes: no
+  require_changes: false  # if true: only post the comment if coverage changes
+  require_base: no        # [yes :: must have a base report to post]
+  require_head: yes       # [yes :: must have a head report to post]
+  branches:               # branch names that can post comment
+    - "main"
+    - "backend-sprint2"
+    - "test-final"
