--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -9,4 +9,4 @@ jobs:
     - name: Install modules
       run: npm install --prefix source/site
     - name: Run tests
-      run: cd .\source\site\ && npx yarn coverage:jest
+      run: cd ./source/site/ && npx yarn coverage:jest
