--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -30,34 +30,45 @@ jobs:
       - name: Install modules
         run: npm install --prefix source/site
         
-      - name: Cypress install
-        uses: cypress-io/github-action@v2
-        with:
-          runTests: false
-          working-directory: source/site
+      # - name: Cypress install
+      #   uses: cypress-io/github-action@v2
+      #   with:
+      #     runTests: false
+      #     working-directory: source/site
 
-      - name: Install modules
+      - name: Start server
         run: cd source/site && npx yarn start-server &
 
       # - name: Generate Jsdocs
       #   run: cd source/site && npx yarn docs    
 
-      - name: Run all tests
-        run: cd source/site && npx yarn coverage
-      - name: Commit coverage files
-        run: |
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git add .source/coverage
-          git commit -m "generated coverage"
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}    
+      # - name: Run all tests
+      #   run: cd source/site && npx yarn coverage
+      # - name: Commit coverage files
+      #   run: |
+      #     git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+      #     git config --local user.name "github-actions[bot]"
+      #     git add .source/coverage
+      #     git commit -m "generated coverage"
 
-      - name: Codecov
-        run: cd source/site && bash <(curl -s https://codecov.io/bash)
+      # - name: Push changes
+      #   uses: ad-m/github-push-action@master
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     branch: ${{ github.ref }}    
+
+
+      - name: Run all tests
+        run: cd source/site && npx yarn coverage:jest
+
+
+      - name: Upload coverage to Codecov
+      - uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          directory: ./source/site/coverage/jest-coverage
+          fail_ci_if_error: true # optional (default = false)
+          verbose: true # optional (default = false)
 
       # # now run the tests from the subfolder
       # - name: Cypress run
