--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -48,7 +48,7 @@ jobs:
       #   run: |
       #     git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
       #     git config --local user.name "github-actions[bot]"
-      #     git add .source/coverage
+      #     git add ./source/coverage
       #     git commit -m "generated coverage"
 
       # - name: Push changes
