working testing ci

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,20 @@ jobs:
         run: cd source/site && npx yarn start-server &
 
       - name: Run all tests
-        run: cd source/site && npx yarn coverage:jest
+        run: cd source/site && npx yarn coverage
+        
+      - name: Commit coverage files
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add ./source/coverage
+          git commit -m "generated coverage"
+
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}    
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
