--- a/.github/workflows/tests_and_docs.yml
+++ b/.github/workflows/tests_and_docs.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add --force source/site/coverage
+          git add --force source/coverage
           git commit -m "generated coverage"
 
 ##### Jsdocs Section ####
