--- a/.github/workflows/tests_and_docs.yml
+++ b/.github/workflows/tests_and_docs.yml
@@ -74,6 +74,6 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-          directory: ./source/site/coverage/merged
+          directory: ./source/coverage/merged
           fail_ci_if_error: true # optional (default = false)
           verbose: true # optional (default = false)
